# utahchess

./: .gitignore  README.MD  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
analyses/alpha_beta_performance_increase/: analysis.py  create_dataset.py  results.txt  results_run_2.txt  results_run_3.txt
gui/: constants.py  piece_to_assetname.py
gui/pygame/: buttons.py  draw_constants.py  draw_current_game_state.py  pygame_gui.py
src/gui/: constants.py  piece_to_assetname.py
src/gui/pygame/: buttons.py  click_handler.py  draw_constants.py  draw_current_game_state.py  pygame_gui.py
src/utahchess/: __init__.py  board.py  move.py  piece.py  regular_move.py
tests/: conftest.py  test_algebraic_notation.py  test_board.py  test_castling.py  test_chess.py  test_en_passant.py  test_legal_moves.py  test_minimax.py  test_move_candidates.py  test_move_validation.py  test_regular_move.py  test_utils.py
utahchess/: _board_repr.py  algebraic_notation.py  board.py  castling.py  chess.py  en_passant.py  legal_moves.py  minimax.py  move.py  move_candidates.py  move_validation.py  piece.py  regular_move.py  tile_movement_utils.py  utils.py
