[flake8]
exclude=.env
extend-ignore=E203,E231,F541
max-line-length=88

[metadata]
name = utahchess
version = 0.01
description = A little Python chess engine.
authors = [Pombo Lutador]
license = MIT
readme = README.md
homepage = https://github.com/PomboLutador/utahchess
repository = https://github.com/PomboLutador/utahchess
documentation = https://github.com/PomboLutador/utahchess
packages = [utahchess]

[options]
install_requires = python_version>'3.8'

[options.extras_require]
GUI = pygame==2.1.0
dev = pytest;flake8;black;isort;mypy